# simple_Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  MeshLoader.cpp  ModelLoader.cpp  Shader.cpp  camera.cpp  main.cpp  mesh.cpp  object.cpp
src/Assets/Shaders/: main.frag  main.vert
src/header/: MeshLoader.hpp  ModelLoader.hpp  Shader.hpp  camera.hpp  mesh.hpp  object.hpp
